fixed overflow issue

--- a/sass/base/_homePage.scss
+++ b/sass/base/_homePage.scss
@@ -6,7 +6,7 @@
   align-items: center;
 
   @include respond(tab) {
-    padding: 5rem 0;
+    padding: 6.5rem 0;
   }
 
   &__title {
@@ -22,7 +22,7 @@
     font-size: 2.2rem;
     @include respond(phone) {
       margin-top: 3rem;
-      font-size: 1.9rem;
+      font-size: 2rem;
     }
 
     &__main {
